syntax = "proto3";
package widedb;
import "google/protobuf/empty.proto";

message Column {
    string family = 1;
    string name = 2;
}

message Value {
    bytes value = 1;
    uint64 timestamp = 2;
}

message PutValues {
    Column column = 1;
    repeated Value values = 2;
}

message DeleteValues {
    Column column = 1;
    repeated uint64 timestamps = 2;
}

message GetValues {
    Column column = 1;
    repeated uint64 timestamps = 2;
}



message CreateTableRequest {
    string name = 1;
    repeated string families = 2;
}

message PutRowRequest {
    string table = 1;
    string row = 2;
    repeated PutValues values = 3;
}

message DeleteRequest {
    string table = 1;
    string row = 2;
    repeated DeleteValues values = 3;
}

message GetRowRequest {
    string table = 1;
    string row = 2;
    repeated GetValues values = 3;
}



message TableInfoResponse {
    uint32 id = 1;
    string name = 2;
    repeated string families = 3;
}

message ListTablesResponse {
    repeated string tables = 1;
}

message ScanRequest {
    
}

service WideDB {
    rpc CreateTable(CreateTableRequest) returns (google.protobuf.Empty);
    rpc ListTables(google.protobuf.Empty) returns (ListTablesResponse);
    rpc PutRow(PutRowRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
    rpc GetRow(GetRowRequest) returns (google.protobuf.Empty);
    rpc Scan(ScanRequest) returns (google.protobuf.Empty);
}