syntax = "proto3";
package widedb;

message CreateTableRequest {
    string table_name = 1;
    repeated string families = 2;
}